# Model_Senate

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start.ps1  start.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
backend/: __init__.py  cli.py  config.py  council.py  election.py  main.py  orchestrator.py  providers.py  reintegrator.py  roles.py  schemas.py  senate.py  storage.py  streaming.py  tools.py  validator.py
docs/: ROADMAP.md  architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
frontend/src/hooks/: useCouncilStream.ts
scripts/: bundle_frontend.py
tests/: test_config.py  test_council.py  test_election.py  test_providers.py  test_senate.py  test_tools.py
