[project]
name = "model-senate"
version = "0.1.0"
description = "Run one prompt through multiple AI models, peer-review the outputs, and synthesize a final answer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
model-senate = "backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
# The bundled production UI (populated by scripts/bundle_frontend.py before a release
# build) ships inside the wheel so `pipx install model-senate` includes the frontend.
artifacts = ["backend/static/**"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

